syntax = "proto3";

package com.road.yishi.proto.item;

message ItemInfoReqMsg {
  repeated int32 id = 1;
}
